<resources>
    <string name="app_name">KnightJeffrey_MyFishSpots</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="my_fish_spots">My Fish Spots</string>
    <string name="new_user">New User</string>
    <string name="email">Email</string>
    <string name="re_enter_email">Re-enter Email</string>
    <string name="search">Search</string>
    <string name="add_spot">Add Spot</string>
    <string name="change">Change</string>
    <string name="description">Description</string>
    <string name="description_filler">This is a description about this saved location. The coordinates are to a location that has been saved by the user because they would like to revisit and fish this spot.</string>
    <string name="edit">Edit</string>
</resources>
