<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textAlignment="center"
           android:textSize="30sp"
           android:text="@string/my_fish_spots"/>

       <EditText
           android:id="@+id/username_input"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/username"/>

       <EditText
           android:id="@+id/password_input"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/password"/>
       <Button
           android:id="@+id/btn_login"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/log_in"/>

       <Button
           android:id="@+id/btn_signup"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/sign_up"/>

   </LinearLayout>

</FrameLayout>